# newcash

./: README  format.sh  generateM4Include.awk  makefile  rustfmt.toml  sqliteExtensions.c
amex_importer/: levenshtein.c  makefile  newcashAMEXImporter  newcashLoadTransactions.tcl
cambridge_trust_importer/: Cargo.toml  makefile
cambridge_trust_importer/src/: main.rs
composite_register/: Cargo.toml  makefile
composite_register/src/: main.rs
documentation/: makefile  newcashUserManual.tex
newcash/: Cargo.toml  makefile
newcash/src/: account.rs  book.rs  calendar.rs  commodities.rs  commodity.rs  constants.rs  main.rs  queries.rs  stock_splits.rs  transaction.rs  utilities.rs
report_generator/: Cargo.toml  makefile
report_generator/balance_sheet_income_expense_statement/: Cargo.toml
report_generator/investments/: Cargo.toml
report_generator/src/: constants.rs  main.rs  queries.rs
rust_library/: Cargo.toml  makefile
transaction_scheduler/: Cargo.toml  makefile
utilities/: makefile  newcashCharities  newcashCommon  newcashCompositeRegister  newcashConvertGnucashDatabase.m4  newcashCreateDatabase.m4  newcashDuplicateTransactions  newcashGenerateReports  newcashIRR.m4  newcashLoadQuotes.m4  newcashLoanPayment.ods  newcashReconciliationAid.m4  newcashScheduledLoanPayment.m4  newcashTDAmeritradeImporter.m4  newcashTDAmeritradePreProcess  newcashTDAmeritradePreProcessCSV.awk  newcashVanguardImporter.m4  newcashVanguardPreProcess  newcashVanguardPreProcessCSV.awk
vanguard_importer/: Cargo.toml  makefile
verifier/: Cargo.toml  makefile
(+12 files in other folders)
