[package]
	name = "newcash"
	version = "0.1.0"
	authors = ["Don Allen <donaldcallen@gmail.com>"]

[dependencies]
	rust_library={path="../rust_library"}
	gdk = "0.11.0"
    lazy_mut = "0.1.0"
	regex = "1.2.0"
	[dependencies.rusqlite]
		version = "0.20.0"
		features = ["load_extension"]
    [dependencies.gtk]
        version = "0.7.0"
        features = ["v3_24"]
