[package]
	name = "newcash"
	version = "0.1.0"
	authors = ["Don Allen <donaldcallen@gmail.com>"]

[dependencies]
	rust_library={path="../rust_library"}
	gdk = "0.12.0"
    gobject-sys = "0.9.1"
    glib-sys = "0.9.1"
    glib = "0.9.0"
    lazy_mut = "0.1.0"
	regex = "1.3.1"
	[dependencies.rusqlite]
		version = "0.21.0"
		features = ["load_extension"]
    [dependencies.gtk]
        version = "0.8.0"
        features = ["v3_24"]
